--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -32,9 +32,9 @@
       \begin{cvitems}
         \item {Authored a risk management app using \textbf{React Native} and \textbf{Flask}. Served as a decision taking tool for executive management.}
         \item {Contributed to a user customer app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
-        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
+        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Improved organization and efficiency across all company.}
         \item {Upgraded a quote web application using \textbf{React Native} and \textbf{Python}. Improved customer experience and user satisfaction.}
-        \item {Contributed to the in-house \textbf{React} and \textbf{React Native} component libraries. Enhanced user experience and increased consistency across all compay in-house and external applications.}
+        \item {Contributed to the in-house \textbf{React Native} component library. Enhanced user experience and increased consistency in all apps.}
         \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
