Add Docker experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,6 +9,7 @@
       \begin{cvitems}
         \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
+        \item {Worked with \textbf{Docker} container infrastructure to encapsulate code into a file system with abstraction and automation.}
       \end{cvitems}
     }
   \cventry
