--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -7,7 +7,7 @@
     {Jan. 2020 - Present}
     {
       \begin{cvitems}
-        \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
+        \item {Developed internal applications and tools for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
         \item {Worked with \textbf{Docker} container infrastructure to encapsulate code into a file system with abstraction and automation.}
       \end{cvitems}
@@ -19,7 +19,7 @@
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
+        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for executive management.}
         \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
         \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
         \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
@@ -35,7 +35,7 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
+        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack.}
         \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
