--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -13,18 +13,30 @@
       \end{cvitems}
     }
   \cventry
+    {Backend Developer <Co-Founder>}
+    {Nure}
+    {Toluca \& CDMX, React \& Node}
+    {Mar. 2017 - Present}
+    {
+      \begin{cvitems}
+        \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
+         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
+      \end{cvitems}
+    }
+  \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
     {CDMX - Remote, React \& Python/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for executive management.}
-        \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
-        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Built an API to be consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Deployed and maintained multi-container applications through \textbf{Docker} and \textbf{ECS} on a daily-basis.}
+        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
+        \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
+        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Improved organization and efficiency across all company.}
+        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
     }
@@ -42,17 +54,6 @@
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
-    \cventry
-      {Backend Developer <Co-Founder>}
-      {Nure}
-      {Toluca \& CDMX, React \& Node}
-      {Mar. 2017 - Present}
-      {
-        \begin{cvitems}
-          \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-           \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
-        \end{cvitems}
-      }
     \cventry
       {Full Stack Developer <Co-Founder>}
       {Musement - Wetopia}
