--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -13,14 +13,15 @@
       \end{cvitems}
     }
   \cventry
-    {Backend Developer <Co-Founder>}
+    {Full Stack Developer <Co-Founder>}
     {Nure}
-    {Toluca \& CDMX, React \& Node}
+    {Toluca \& CDMX, React/RN \& Node}
     {Mar. 2017 - Present}
     {
       \begin{cvitems}
-        \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
+        \item {Designed components, higher order components, reusable hooks and utilities for both \textbf{React} and \textbf{React Native}.}
+        \item {Developed and leaded the backend for multiple (5+) projects using \textbf{Node}. Managed infrastructure and application security.}
+         \item {Managed customer relationships, financial income, taxes, and data analysis. Managed projects using \textbf{SCRUM}.}
       \end{cvitems}
     }
   \cventry
@@ -31,7 +32,7 @@
     {
       \begin{cvitems}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Built an API to be consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Built an API consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Deployed and maintained multi-container applications through \textbf{Docker} and \textbf{ECS} on a daily-basis.}
         \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
         \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
