--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -51,7 +51,6 @@
         \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack.}
         \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
-        \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
@@ -62,8 +61,8 @@
       {Feb. 2016 - May. 2017}
       {
         \begin{cvitems}
-          \item {Developed application to share experience, posts and connect with others in order to learn from them using \textbf{Node} and \textbf{Angular}.}
-          \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
+          \item {Developed a social application to share experiences and connect with others to get guidance; built using \textbf{Node} and \textbf{Angular}.}
+          \item {Designed an efficient \textbf{Mongo} database for handling all resources. Deployed and maintained application using AWS \textbf{EC2}.}
         \end{cvitems}
       }
   \end{cventries}
