Added a lot of experience

--- a/resume.tex
+++ b/resume.tex
@@ -84,6 +84,7 @@ analytical and driven mindset. Full-stack developer and sci-fi lover }
 %%% Import contents
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{education.tex}
+\import{\sectiondir}{committees.tex}
 \import{\sectiondir}{honors.tex}
 
 \end{document}
