--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,13 +3,33 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Ksquare Solutions}
-    {Dallas - DFW, React/RN \& Go/Node}
+    {Dallas - DFW, React/RN \& Go}
     {Jan. 2020 - Present}
     {
       \begin{cvitems}
-        \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
-        \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
-        \item {Worked with \textbf{Docker} container infrastructure to encapsulate code into a file system with abstraction and automation.}
+        \item {Developed internal applications and tools for third party integrations using \textbf{Golang}, \textbf{React} and \textbf{React Native}.}
+        \item {Coded multiple microservicesfor automation manual management tasks using \textbf{Golang} and \textbf{Selenium}.}
+        \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Golang}.}
+        \item {Built a custom Google Hire clone for internal and external candidate recruitment and profiling using \textbf{Golang} and \textbf{React}}
+        \item {Used \textbf{Docker} container infrastructure and leaded implementation of \textbf{CI/CD} using \textbf{Jenkins} on multiple internal projects.}
+        \item {Deployed applications through \textbf{Docker} containers using \textbf{AWS ECS}.}
+      \end{cvitems}
+    }
+  \cventry
+    {Backend Developer <Co-Founder>}
+    {Nure}
+    {Toluca \& CDMX, React \& Go/Node}
+    {Mar. 2017 - Present}
+    {
+      \begin{cvitems}
+        \item {Integrated Amazon \textbf{CloudWatch} with Amazon \textbf{EC2} instances for monitoring the log files and track metrics.}
+        \item {Experienced with event-driven and scheduled AWS \textbf{Lambda} functions to trigger various AWS resources.}
+        \item {Automated, configured, deployed and maintaned multiple projects on \textbf{AWS}.}
+        \item {Improved existing applications performance writing and implemented microservices in \textbf{Golang}.}
+        \item {Designed components, higher order components, reusable hooks and utilities for both \textbf{React} and \textbf{React Native}.}
+        \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Golang} and \textbf{Node}.}
+        \item {Designed and multi-threaded microservices for internal tasks using \textbf{Golang}.}
+         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
       \end{cvitems}
     }
   \cventry
@@ -19,12 +39,17 @@
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Daily-basis deploying and maintaining multi-container applications through \textbf{Docker} and \textbf{ECS}.}
+        \item {Deployed and maintained multi-container applications through \textbf{Docker} and \textbf{ECS} on a daily-basis.}
         \item {Worked with \textbf{CI/CD} using \textbf{Jenkins} to automate the build process from version control tool into testing and production environment.}
-        \item {Contributed to a user management app using \textbf{React} and \textbf{Golang}. Improved user experience and interaction.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Node}. Improved customer experience and user satisfaction.}
-        \item {Developed an API to be consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
-        \item {Assisted in designing and management of \textbf{PostgreSQL} database schemas and tables.}
+        \item {Written a \textbf{Golang} event oriented accounting system for data processing, consuming, querying and auditing.}
+        \item {Contributed to the \textbf{Golang} money laundering prevention tool, analazying payments of customers and alert threats.}
+        \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
+        \item {Built and API consumed by in-house sytems using \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
+        \item {Contributed to a customer management app using \textbf{React} and \textbf{Golang}. Improved user experience and response.}
+        \item {Upgraded a loan payment calculator application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
+        \item {Developed a loan management application using \textbf{React} and \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Assisted in designing and managing of \textbf{PostgreSQL} database tables and views.}
       \end{cvitems}
     }
   \cventry
@@ -34,35 +59,26 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
+        \item {Responsible for ensuring systems and network security, debugging performance and monitoring usage using AWS \textbf{CloudWatch}.}
         \item {Leaded secure APIs development using \textbf{OAuth} and \textbf{JWT} for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
         \item {Developed a real-time web application for monitoring infrastructure at telecommunication sites using \textbf{MERN} stack.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io} and \textbf{RabbitMQ}. Developed a client-side test suite using \textbf{Python}.}
+        \item {Developed a microservice for traffic statistical analysis and reporting using \textbf{Flask} and \textbf{Pandas}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
-    \cventry
-      {Backend Developer <Co-Founder>}
-      {Nure}
-      {Toluca \& CDMX, React \& Node}
-      {Mar. 2017 - Present}
-      {
-        \begin{cvitems}
-          \item {Integrated Amazon Cloud Watch with Amazon \textbf{EC2} instances for monitoring the log files and track metrics.}
-          \item {Experienced with event-driven and scheduled AWS \textbf{Lambda} functions to trigger various AWS resources.}
-          \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-           \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
-        \end{cvitems}
-      }
-    \cventry
-      {Full Stack Developer <Co-Founder>}
-      {Musement - Wetopia}
-      {Guadalajara, Angular \& Node}
-      {Feb. 2016 - May. 2017}
-      {
-        \begin{cvitems}
-          \item {Developed a social application to share experiences and connect with others to get guidance; built using \textbf{Node} and \textbf{Angular}.}
-          \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
-        \end{cvitems}
-      }
-  \end{cventries}
+  \cventry
+    {Full Stack Developer <Co-Founder>}
+    {Musement - Wetopia}
+    {Guadalajara, Angular \& Node}
+    {Feb. 2016 - May. 2017}
+    {
+      \begin{cvitems}
+        \item {Developed a social application to share experiences and connect with others to get guidance; built using \textbf{Node} and \textbf{Angular}.}
+        \item {Designed an efficient Mongo database for handling all resources. Deployed and maintained application using AWS \textbf{EC2}.}
+        \item {Created \textbf{Python} scripts to control and automate \textbf{AWS} instance operations.}
+        \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
+      \end{cvitems}
+    }
+\end{cventries}
