Update experience and education

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,14 +1,14 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {B.S. in Computer Systems Engineering}
-    {ITESM (Monterrey Institute of Technology and Higher Education)}
+    {B.S. in Computer Science}
+    {Monterrey Institute of Technology and Higher Education (ITESM)}
     {Toluca, Mexico}
     {Jan. 2013 - May. 2017}
     {
       \begin{cvitems}
         \item {Graduated summa cum laude with \textbf{4.0+}. }
-        \item {Got an academic \textbf{Excellence Scholarship} which is given to promising high school students.}
+        \item {Got an academic \textbf{Excellence Scholarship}, which is given to promising high school students.}
       \end{cvitems}
     }
 \end{cventries}
