--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -32,7 +32,6 @@
     {
       \begin{cvitems}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Built an API consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Deployed and maintained multi-container applications through \textbf{Docker} and \textbf{ECS} on a daily-basis.}
         \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
         \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
@@ -56,13 +55,25 @@
     }
     \cventry
       {Full Stack Developer <Co-Founder>}
-      {Musement - Wetopia}
+      {Wetopia}
       {Guadalajara, Angular \& Node}
       {Feb. 2016 - May. 2017}
       {
         \begin{cvitems}
-          \item {Developed a social application to share experiences and connect with others to get guidance; built using \textbf{Node} and \textbf{Angular}.}
+          \item{Designed, developed, implemented, and tested embedded software in for internal projects using \textbf{Node} and \textbf{Python} scripting.}
+          \item {Developed a Kickstarter for ideas; share them, receive feedback from experts and improve. Built using \textbf{Node} and \textbf{Angular}.}
           \item {Designed an efficient \textbf{Mongo} database for handling all resources. Deployed and maintained application using AWS \textbf{EC2}.}
         \end{cvitems}
       }
+      \cventry
+        {Full Stack Developer <Co-Founder>}
+        {Musement}
+        {Toluca, Angular \& Node}
+        {May 2015 - Feb. 2016}
+        {
+          \begin{cvitems}
+            \item {Developed a \textbf{Node} and \textbf{Angular} social application to share highlights of your work, and inspire other people while doing so.}
+            \item {Authored a minimalistic time-tracking app to manage your own time and project progress; built using \textbf{Node} and \textbf{Angular}.}
+          \end{cvitems}
+        }
   \end{cventries}
