--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -2,7 +2,7 @@
 \begin{cvhonors}
   \cvhonor
     {MERN \& TensorFlow}
-    {Reverse image search engine, Client-API, and management dashboard}
+    {Reverse image search engine and consumer API}
     {Visual Search}
     {2019}
   \cvhonor
@@ -12,12 +12,12 @@
     {2019}
   \cvhonor
     {MERN}
-    {A minimalistic nice web agenda for gym classes}
+    {A minimalistic nice web agenda for pilates classes}
     {JIRAF}
     {2018}
   \cvhonor
     {MERN \& Python}
-    {Web application to automate your activity on Instagram}
+    {Web application to automate activity on Instagram}
     {OWA Influencers}
     {2017}
   \cvhonor
