--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -34,9 +34,9 @@
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
         \item {Deployed and maintained multi-container applications through \textbf{Docker} and \textbf{ECS} on a daily-basis.}
         \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
-        \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
-        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Improved organization and efficiency across all company.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
+        \item {Contributed to a customer management app using \textbf{React} and \textbf{Golang}. Improved user experience and response times.}
+        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Upgraded a loan payment calculator application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
     }
@@ -48,8 +48,8 @@
     {
       \begin{cvitems}
         \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack.}
-        \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
-        \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
+        \item {Leaded secure APIs development using OAuth and JWT for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
+        \item {Implemented a solution for IoT communication using \textbf{Socket.io} and \textbf{RabbitMQ}. Developed a client-side test suite using \textbf{Python}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
