--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,6 +9,7 @@
       \begin{cvitems}
         \item {Developed internal applications and tools for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
+        \item {Used Docker container infrastructure and leaded implementation of \textbf{CI/CD} using \textbf{Jenkins} on multiple internal projects.}
       \end{cvitems}
     }
   \cventry
