--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -56,13 +56,25 @@
     }
     \cventry
       {Full Stack Developer <Co-Founder>}
-      {Musement - Wetopia}
+      {Wetopia}
       {Guadalajara, Angular \& Node}
       {Feb. 2016 - May. 2017}
       {
         \begin{cvitems}
-          \item {Developed application to share experience, posts and connect with others in order to learn from them using \textbf{Node} and \textbf{Angular}.}
-          \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
+          \item{Designed, developed, implemented, and tested embedded software in for internal projects using \textbf{Node} and \textbf{Python} scripting.}
+          \item {Developed a Kickstarter for ideas; share them, receive feedback from experts and improve. Built using \textbf{Node} and \textbf{Angular}.}
+          \item {Designed an efficient \textbf{Mongo} database for handling all resources. Deployed and maintained application using AWS \textbf{EC2}.}
         \end{cvitems}
       }
+      \cventry
+        {Full Stack Developer <Co-Founder>}
+        {Musement}
+        {Toluca, Angular \& Node}
+        {May 2015 - Feb. 2016}
+        {
+          \begin{cvitems}
+            \item {Developed a \textbf{Node} and \textbf{Angular} social application to share highlights of your work, and inspire other people while doing so.}
+            \item {Authored a minimalistic time-tracking app to manage your own time and project progress; built using \textbf{Node} and \textbf{Angular}.}
+          \end{cvitems}
+        }
   \end{cventries}
