Update resume format

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -27,7 +27,7 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {CDMX - Remote, React/RN \& Python/Go}
+    {CDMX - Remote, React/RN \& PY/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
@@ -48,9 +48,8 @@
     {
       \begin{cvitems}
         \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack.}
-        \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
+        \item {Leaded secure APIs development using OAuth and JWT for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
-        \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
